# ECCV_context

./: pyproject.toml
context_evaluator/: __init__.py  logger.py
context_evaluator/configs/: MODEL_CONFIGS.yaml  example_config.yaml
context_evaluator/framework/: main.py
context_evaluator/models/: README.md  __init__.py  base.py  cache_manager.py  model_config.py  video_utils.py
context_evaluator/models/providers/: __init__.py  claude.py  gemini.py  openai.py
context_evaluator/ranking_module/: README.md  __init__.py  example_usage.py  ranking.py  requirements.txt  test_ranking.py
